# binance

./: .buildinfo  .env_example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: python-app.yml  python-deploy-github-pages.yml  python-pytest.yml
_modules/: index.html
_modules/binance/: enums.html  order.html
_modules/binance/client/: aioclient.html  (+2 more)
_sources/: index.rst.txt
_sources/api/: client.rst.txt  enums.rst.txt  index.rst.txt
_sources/contribution/: index.rst.txt
_sources/tests/: index.rst.txt
api/: client.html  enums.html  index.html  market.html  order_types.html  response.html  trade.html
api/endpoints/: index.html
binance/: __init__.py  constants.py
binance/client/: __init__.py  aioclient.py  base.py  client.py  response.py
binance/enums/: __init__.py  binance.py
binance/order/: __init__.py  base.py  limit.py  stop.py  stop_market.py  take_profit_masket.py
contributing/: index.html  setup.html
contribution/: index.html  setup.html
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst  usage.rst
docs/source/: conf.py  index.rst
src/binance/: __init__.py  client.py  constants.py  enums.py  order.py  order.py.backup  parameters.py  utils.py  version.py
tests/: index.html  market_endpoints.html
tests/client/: test_client.py
tests/order/: conftest.py  test_limit.py
user_guide/: configuration.html  index.html  installation.html
(+76 files in other folders)
